[package]
name = "ggsweep"
version = "0.1.0"
authors = ["HaNaK0 <saturn-v@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
log = "0.4"
simple_logger = "1.11.0"
rand = "0.8.1"
cgmath = {version = "0.18.0", features = ["swizzle", "mint"]}
mint = "0.5.6"
ron = "0.6.4"
serde = "1.0.123"
